# nate_bot

./: .gitignore  README.md  docker-compose.yaml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml
backend/discord_bot/: Cargo.toml
backend/discord_bot/src/: error.rs  main.rs  prelude.rs
backend/discord_bot/src/commands/: mod.rs  music.rs  patch_notes.rs  pictures.rs  ping.rs  presence.rs  purge.rs  roles.rs  roll.rs
backend/discord_bot/src/commands/utils/: mod.rs  sounds.rs  videos.rs
backend/discord_bot/src/events/: audit.rs  lottery.rs  mod.rs  music.rs  reactions.rs  ready.rs  roles.rs
backend/discord_bot/src/helpers/: crypto.rs  mod.rs  settings.rs  spam.rs
backend/discord_bot/src/lavalink/: commands.rs  events.rs  mod.rs
backend/discord_bot/src/services/: mod.rs
backend/discord_bot/src/services/soundcloud/: client.rs  mod.rs
backend/lib/database/: Cargo.toml
backend/lib/database/.sqlx/: query-23d346177e347fd2703062fc9bf73996094194e4828d2faee260a18578493c24.json  query-3f19b9c2f6b009cf5f5c173d34496d862a91580eae16609aa2599632a763c43f.json  query-54615cb9571d92511303e8ee411d2c5dfd30d103d69f5406032e5e7aba10bdff.json  query-5a203082625b94205d70e75b886fcc4a34c6085b2325672273d04690709da50c.json  query-76ce0af0aa0b821e96080bb80225766abbf49ced76487d39da3e185185ebc8d9.json  query-91005c9573e294275ce778314ae6ac31d6ab5d441b071eac31408fe82b57709e.json  query-97a00b6d5cb71e1150d8c8c245f0c02df265776bc2a3a74d3b9625e1e66ddfb8.json  query-a4240d8be90e56120e347095f05e0c3ba4cf7024d2d478eb847de75e379acd3f.json  query-a64f3f41f86be2c4981ba6cb8cf29664de2ac3a5cda6844eede377a3bee5f033.json  query-b5bf7265a50da2f9bfc04f907889125ff35ae0ce925cfd1e99b412f0021b3354.json  query-b8329538f696e67dea947f0435583dd5a434206991324d984fe3ea1d4e34a6df.json  query-c612d9c1370157110af007b7988ef0e1d254becf354e4d6543856493ea803873.json  query-d0b8d7b1c47343bce82362a5653040a3719beef7b3f71bb6610e5a4bee6ac358.json  query-d6ec0f9974f1e88387fd8fba29dfd5bcbbaeb412fc2d70764c1eb3c4509ade0b.json  query-db4d515860b54aca7563ee05728d25d5a71679cfd8d7701d2c7feadd7f48dfca.json  query-de2f769275a7008cf5365f670b04f72165085b7fc5e28e58157b20d4333cd4cd.json  query-e2abb74deea2844311cf6412bb6f3c88fb55ca69c2e7a5fbd94da46340bbc947.json  query-eb99913ab1e9a057e3ff7db905a21676b5607f6ef065b16405b0d40769ae0d1a.json
backend/lib/database/migrations/: 0001_initial_store.down.sql  0003_add_patch_notes.down.sql  0003_add_patch_notes.up.sql  0004_add_auth_tokens.up.sql  0004_add_steam_app_patches.down.sql  0004_add_steam_app_patches.up.sql  0005_add_bot_settings.down.sql  0005_add_bot_settings.up.sql
backend/lib/database/src/: auth_tokens.rs  bot_settings.rs  lib.rs  patch_notes.rs  patch_notes_subscriptions.rs  pictures.rs  prelude.rs
backend/lib/queue/: Cargo.toml
backend/lib/queue/src/: broker.rs  lib.rs  listener.rs  prelude.rs  redis_queue.rs  scheduler.rs  sender.rs
backend/lib/services/: Cargo.toml
backend/lib/services/src/: client.rs  lib.rs  prelude.rs
backend/lib/services/src/steam/: app_news.rs  mod.rs
backend/lib/utils/: Cargo.toml
backend/lib/utils/src/: env.rs  lib.rs  logger.rs  prelude.rs
backend/lib/webhooks/: Cargo.toml
backend/lib/webhooks/src/: lib.rs  patch_notes.rs  prelude.rs
backend/worker/: Cargo.toml
backend/worker/src/: listener.rs  main.rs  prelude.rs  scheduler.rs
backend/worker/src/jobs/: mod.rs  patch_scraper.rs
backend/worker/src/jobs/patch_scraper/: bbcode.rs  deadlock.rs  mod.rs  steam_apps.rs  webdriver.rs
discord_bot/: Cargo.toml
discord_bot/migrations/: 0001_initial_store.up.sql  0002_remove_keystore.down.sql
discord_bot/src/: error.rs  lib.rs  main.rs  prelude.rs
discord_bot/src/commands/: help.rs  mod.rs  music.rs  pictures.rs  ping.rs  purge.rs  roles.rs  roll.rs
discord_bot/src/commands/music/: mod.rs
discord_bot/src/commands/music/utils/: mod.rs  youtube.rs
discord_bot/src/commands/utils/: mod.rs  videos.rs
discord_bot/src/db/: mod.rs  pictures.rs  store.rs
discord_bot/src/events/: audit.rs  lottery.rs  mod.rs  music.rs  reactions.rs  ready.rs  roles.rs
discord_bot/src/utils/: env.rs  mod.rs  spam.rs
docker/: Dockerfile
docker/client/: Dockerfile
docker/discord_bot/: Dockerfile
docker/worker/: Dockerfile
lavalink/: application.yml
