[workspace]
package.version = "0.1.0"
package.edition = "2024"
resolver = "3"
members = [
    "discord_bot",
    "lib/database",
    "lib/queue",
    "lib/services",
    "lib/utils",
    "lib/webhooks",
    "worker",
]

[workspace.dependencies]
chrono = { version = "=0.4.43", features = ["serde"] }
croner = "=3.0.1"
dotenvy = "=0.15.7"
env_logger = "=0.11.8"
htmd = "=0.5.0"
log = "=0.4.29"
poise = "=0.6.1"
rand = "=0.9.2"
redis = { version = "=1.0.2", features = [
    "cluster-async",
    "connection-manager",
    "tokio-rustls-comp",
] }
regex = "=1.12.2"
reqwest = { version = "=0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
reqwest-middleware = { version = "=0.5.0", features = ["query"] }
reqwest-retry = "=0.9.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serenity = { version = "=0.12.5", features = ["temp_cache"] }
sqlx = { version = "=0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
test-log = { version = "=0.2.19", features = ["color", "trace"] }
thirtyfour = "=0.36.1"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-cron-scheduler = { version = "=0.15.1", features = ["signal"] }
url = "=2.5.8"

[workspace.lints.rust]
missing_docs = "warn"

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }

[profile.dev.package.sqlx-macros]
opt-level = 3
