[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "=0.4.38"
dotenvy = "=0.15.7"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
rand = "=0.8.5"
regex = "=1.10.6"
reqwest = { version = "=0.12.7", default-features = false, features = [
    "rustls-tls",
] }
rusty_ytdl = { version = "=0.7.4", features = ["rustls-tls"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
    "temp_cache",
] }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", features = [
    "builtin-queue",
] }
sqlx = { version = "=0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
symphonia = { version = "=0.5.4", features = ["all-codecs", "all-formats"] }
thiserror = "=1.0.64"
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread"] }
url = "=2.5.2"
