[package]
name = "discord_bot"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
database = { path = "../lib/database" }
env_logger = { workspace = true }
poise = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utils = { path = "../lib/utils" }
webhooks = { path = "../lib/webhooks" }
