[package]
name = "discord_bot"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
database = { path = "../lib/database" }
log = { workspace = true }
poise = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utils = { path = "../lib/utils" }
webhooks = { path = "../lib/webhooks" }

[dev-dependencies]
test-log = { workspace = true }
