[package]
name = "worker"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
database = { path = "../lib/database" }
log = { workspace = true }
queue = { path = "../lib/queue" }
regex = { workspace = true }
serde = { workspace = true }
services = { path = "../lib/services" }
thirtyfour = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utils = { path = "../lib/utils" }
webhooks = { path = "../lib/webhooks" }

[dev-dependencies]
croner = { workspace = true }
test-log = { workspace = true }
