[package]
name = "queue"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
utils = { path = "../../lib/utils" }
