[package]
name = "utils"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
